assets/scss/_grid.scss
.grid{

}

.grid-sizer{
	width: 1%;
}
.grid-item, .grid-sizer, .grid-stamp {
    width: percentage(1 / 3);
    padding: 0 20px;
}

.grid-gutter{
	width: 0%;
}

.grid-size-xs-1-1{ width: percentage(1/1); }
.grid-size-xs-1-2{ width: percentage(1/2); }
.grid-size-xs-1-3{ width: percentage(1/3); }
.grid-size-xs-2-3{ width: percentage(2/3); }

@media screen and (min-width: $screen-sm-min) {
	.grid-size-sm-1-1{ width: percentage(1/1); }
	.grid-size-sm-1-2{ width: percentage(1/2); }
	.grid-size-sm-1-3{ width: percentage(1/3); }
	.grid-size-sm-2-3{ width: percentage(2/3); }
}
@media screen and (min-width: $screen-md-min) {
	.grid-size-md-1-1{ width: percentage(1/1); }
	.grid-size-md-1-2{ width: percentage(1/2); }
	.grid-size-md-1-3{ width: percentage(1/3); }
	.grid-size-md-2-3{ width: percentage(2/3); }
}
@media screen and (min-width: $screen-lg-min) {
	.grid-size-lg-1-1{ width: percentage(1/1); }
	.grid-size-lg-1-2{ width: percentage(1/2); }
	.grid-size-lg-1-3{ width: percentage(1/3); }
	.grid-size-lg-2-3{ width: percentage(2/3); }
}

.grid-item-with-us{
	width: percentage(1/3);
	@media screen and (min-width: $screen-md-min) {
		width: percentage(1/3);
		&.expanded{
			width: percentage(2/3);
		}
	}
}
.grid-stamp{
	position: absolute;
}
.grid-stamp-top-right{
	top: 0;
	left: 0;
}


.card{
	position: relative;
	background: #F0F0F0;
	padding: 40px;
	margin-bottom: 40px;
	&:after{
		content: '';
		position: absolute;
		top: 0;
		right: 0;
		display: block;
		height: 0;
		width: 0;
		border: 20px solid white;
		border-bottom-color: #808080;
		border-left-color: #808080;
	}
}

.card--icon{
	margin-right: 25px;
}

.card--title{
	margin-bottom: 40px;
}

.card--title{
	font-size: 18px;
}

.card--content{
	font-size: 23px;
}

.card2{
	@extend .clearfix;
	position: relative;
	margin-bottom: 40px;
	&:before{
		content: '';
		position: absolute;
		top: 0;
		right: 0;
		display: block;
		height: 0;
		width: 0;
		border: 20px solid white;
		border-bottom-color: #808080;
		border-left-color: #808080;
	}
	.card2--holder{
		> img{
			width: 100%;
		}
	}
	.card2--summary{
		background: #F0F0F0;
		min-height: 200px;
	}
	.card2--short{
		padding: 40px;

	}
	.card2--detail{
		background: darken(#F0F0F0, 10%);
		display: none;
		padding: 40px;
		min-height: 200px;
	}
	&.expanded{
		.card2--summary, .card2--detail{
			display: block;
		}
	}
	@media screen and (min-width: $screen-md-min) {
		&.expanded{
			.card2--summary, .card2--detail{
				width: 50%;
				float: left;
			}
		}
	}
}

